--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,13 +1,55 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
+  min-height:100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relatve;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main {
+  margin: 0 auto;
+  overflow: auto;
+  padding-bottom: 100px;
+  width: 90vw;
+  min-height: 100vh;
+}
+
+.footer {
+  text-align: center;
+  background: blue;
+  position: relative;
+  padding-top: 20px;
+  height: 100px;
+  bottom: 0;
+  width: 100%;
+  clear: both;
+}
+.container {
+  
+}
+.row {
+  display: flex;
+}
+
+.col {
+
 }
