--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,28 +1,23 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-  min-height:100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  position: relatve;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
 .page-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   min-height: 100%;
+  background-color: #4D194D;
+  color:aliceblue;
+  @apply items-center
+}
+
+button[type=submit] {
+  border: 2px solid #144552; 
+  background-color: #006466;
+  color: white;
+  @apply flex justify-between items-center px-2 py-1 rounded
 }
 
 .main {
