--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -3,6 +3,34 @@
 @tailwind utilities;
 
 
+.navContainer {
+  top:0;
+  min-height: 80px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+}
+.logo {
+  text-decoration: none;
+}
+
+.products{
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #144552;
+  color: aliceblue;
+  justify-content: space-around;
+
+}
+.iconbig {
+  width: 45px;
+  height: 45px;
+}
+
 .page-container {
   display: flex;
   justify-content: center;
@@ -18,7 +46,6 @@
   border-radius: 15px;
   max-width: 200px;
   max-height: 400px;
-  @apply flex shadow-lg m-7 p-3
 }
 
 .link {
@@ -93,3 +120,7 @@ button[type=submit] {
   justify-content: flex-end;
 }
 
+/* .pop-film-img {
+  max-width: 200px;
+  height: auto;
+} */
